// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Availability /> should not render by default if state is "ok" 1`] = `<DocumentFragment />`;

exports[`<Availability /> should not render when text is empty 1`] = `<DocumentFragment />`;

exports[`<Availability /> should render if state is "ok" when "showWhenAvailable" is set 1`] = `
<DocumentFragment>
  <div
    class="engage__typography engage__typography_body2 ui-shared__availability sg-ey0rgj-Typography-root-Typography-body2-Typography-colorSuccess"
    data-test-id="availabilityText: Available"
  >
    Available
  </div>
</DocumentFragment>
`;

exports[`<Availability /> should render if state is "warning" 1`] = `
<DocumentFragment>
  <div
    class="engage__typography engage__typography_body2 ui-shared__availability sg-nusujr-Typography-root-Typography-body2-Typography-colorWarning"
    data-test-id="availabilityText: Only 5 left"
  >
    Only 5 left
  </div>
</DocumentFragment>
`;

exports[`<Availability /> should render if state is "warning" 2`] = `
<DocumentFragment>
  <div
    class="engage__typography engage__typography_body2 ui-shared__availability sg-xufsat-Typography-root-Typography-body2-Typography-colorError"
    data-test-id="availabilityText: Out of stock"
  >
    Out of stock
  </div>
</DocumentFragment>
`;
